# lumogis

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY-PLUGINS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.activepieces.yml  docker-compose.dev.yml  docker-compose.falkordb.yml  docker-compose.litellm.yml  docker-compose.mock-capability.yml  docker-compose.override.yml.linux  docker-compose.override.yml.macos  docker-compose.override.yml.windows  docker-compose.parity-premium.yml  docker-compose.parity.yml  docker-compose.playwright.yml  docker-compose.premium.yml  docker-compose.public-rc-stack.yml  docker-compose.stt.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
branding/: BRAND.md  brand-guide.md
config/: librechat.coldstart.yaml  librechat.yaml  litellm.yaml  models.yaml  ollama_catalog_fallback.json  test.env.example
docs/: LUMOGIS_REFERENCE_MANUAL.md  README.md  SECURITY-AUDIT-001.md  chatGPT_lumogis_ecosystem_reference_model.md  compass_artifact_wf-f17129eb-32f9-4ef6-8969-0967be28122a_text_markdown.md  connect-and-verify.md  connector-credentials.md  dev-cheatsheet.md  extending-the-stack.md  gpu-setup.md  graph-schema.md  kg_operations_guide.md  kg_reference.md  lumogis_kg_quality_strategy.md  maintainers.md  per-user-export-format.md  structured-logging.md  troubleshooting.md
orchestrator/: Dockerfile  __version__.py  auth.py  authz.py  config.py  correlation.py  csrf.py  db_default_user_remap.py  db_migrations.py  docker-entrypoint.sh  events.py  hooks.py  librechat_config.py  logging_config.py  loop.py  main.py  mcp_server.py  ollama_client.py  permissions.py  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  settings_store.py  visibility.py
postgres/: 00-create-ap-db.sh  init.sql
scripts/: check-main-hygiene.sh  check-migrations-fresh-db.sh  check-protected-release-files.sh  check-public-export.sh  check_no_default_user.sh  create-upstream-export-tree.sh  demo-session-seed.sh  demo-test.sh  detect-hardware.sh  init-env.sh  install.sh  integration-public-rc.sh  rc_test_env_defaults.py  setup.sh  (+3 more)
(+588 files in other folders)
