[project]
name = "lumogis"
version = "0.3.0rc1"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["orchestrator/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require running Docker stack (see make test-integration)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"orchestrator/main.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
