[project]
name = "lumogis"
version = "0.3.0rc1"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["orchestrator/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require running Docker stack (see make test-integration)",
    "manual: marks operator-driven gates (skipped by default compose integration)",
    "public_rc: deterministic subset for verify-public-rc (no external RSS/CalDAV/ntfy; see Makefile)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Line length is not enforced as a hard gate (historical long log/SQL strings).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"orchestrator/main.py" = ["E402"]
# Tests: intentional late imports after env/sys.modules setup; pytest fixtures
# share names with symbols imported for re-export from sibling modules.
"orchestrator/tests/**" = ["E402", "F811"]

[tool.ruff.lint.isort]
force-single-line = true
